--- a/src/components/ModalInvite/index.scss
+++ b/src/components/ModalInvite/index.scss
@@ -2,7 +2,6 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  
 }
 .ModalSearch {
   display: flex;
@@ -71,3 +70,67 @@
   }
 }
 
+.Invitation {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  height: 154px;
+  margin: 28px 0 26px 0;
+  overflow-y: auto;
+
+  &__block {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+
+    &:not(:first-child) {
+      margin-top: 22px;
+    }
+    button {
+      width: 130px;
+      height: 30px;
+      margin-right: 20px;
+    }
+  }
+
+  &__block-photo {
+    border-radius: 3px;
+    margin-right: 10px;
+  }
+
+  &__block-information {
+    display: flex;
+    flex-direction: column;
+    margin-right: 136px;
+    font-size: 13px;
+    p {
+      color: #666666;
+      font-weight: 600;
+      margin: 0;
+    }
+    a {
+      color: #666666;
+      margin: 0;
+      text-decoration: none;
+    }
+  }
+  &__block-activity {
+    align-self: center;
+    color: #bababa;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 11px;
+    margin-bottom: 0;
+    margin-right: 20px;
+  }
+}
+::-webkit-scrollbar {
+  border-radius: 3px;
+  width: 5px;
+  background: #f7f7f7;
+}
+::-webkit-scrollbar-thumb {
+  background: #d9d9d9;
+  border-radius: 3px;
+  width: 5px;
+}
