--- a/src/components/Modal/index.scss
+++ b/src/components/Modal/index.scss
@@ -2,6 +2,9 @@
   background: #ffffff;
   border-radius: 8px;
   width: 670px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 
   &__overlay {
     background-color: rgba(0, 0, 0, 0.4);
@@ -27,7 +30,7 @@
   }
 
   &__body {
-    padding: 50px 50px 30px 50px;
+    padding-top: 50px;
   }
 
   &__title {
@@ -35,73 +38,5 @@
     font-family: 'Open Sans', sans-serif;
     font-size: 22px;
     margin: 0;
-  }
-
-  .ButtonSelect {
-    margin-right: 8px;
-    overflow: hidden;
-    position: relative;
-    width: 100px;
-
-    &__arrow {
-      position: absolute;
-      top: 8px;
-      right: 18px;
-    }
-
-    select {
-      appearance: none;
-      background: transparent;
-      border: 1px solid #dbdbdb;
-      border-radius: 3px;
-      box-sizing: border-box;
-      color: #757575;
-      font-family: 'Open Sans', sans-serif;
-      font-size: 12px;
-      height: 45px;
-      margin-right: 8px;
-      outline: none;
-      padding: 14px 18px 14px 18px;
-      width: 100px;
-    }
-  }
-}
-
-.ModalFooter {
-  align-items: center;
-  background: #fafafa;
-  border-radius: 0 0 8px 8px;
-  display: flex;
-  justify-content: space-between;
-  padding: 30px 50px 30px 50px;
-
-  &__link {
-    color: #000000;
-    font-family: 'Open Sans', sans-serif;
-    font-size: 13px;
-  }
-
-  &__action {
-    display: flex;
-    flex-direction: row;
-    height: 45px;
-  }
-
-  button {
-    background: linear-gradient(
-        0deg,
-        rgba(45, 156, 219, 0.56),
-        rgba(45, 156, 219, 0.56)
-      ),
-      #ad78c9;
-    border: 0;
-    border-radius: 2.81458px;
-    color: #ffffff;
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 600;
-    font-size: 13px;
-    outline: none;
-    text-align: center;
-    width: 160px;
   }
 }
