--- a/src/components/ButtonSelect/index.scss
+++ b/src/components/ButtonSelect/index.scss
@@ -1,6 +1,5 @@
 .ButtonSelect {
-  background: #FFFFFF;
-  margin-right: 8px;
+  background: #ffffff;
   overflow: hidden;
   position: relative;
   width: 100px;
@@ -21,7 +20,6 @@
     font-family: 'Open Sans', sans-serif;
     font-size: 12px;
     height: 45px;
-    margin-right: 8px;
     outline: none;
     padding: 14px 18px 14px 18px;
     width: 100px;
