--- a/src/components/Modal/index.scss
+++ b/src/components/Modal/index.scss
@@ -7,7 +7,12 @@
   flex-direction: column;
 
   &__overlay {
-    background-color: rgba(0, 0, 0, 0.4);
+    background: linear-gradient(
+        233.13deg,
+        rgba(107, 149, 227, 0.8) 0%,
+        rgba(103, 54, 107, 0.8) 100%
+      ),
+      #62538b;
     align-items: center;
     display: flex;
     justify-content: center;
